--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
     margin-top: 20px;
 }
 
-.navbar.navbar-expand {
+.cuatom_header {
     background: #2a334661;
     border-radius: 50px;
     padding: 0px 35px;
@@ -12,7 +12,7 @@
     color: #fff;
 }
 
-.navbar.navbar-expand a {
+.cuatom_header a {
     color: #fff;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -35,6 +35,10 @@
 
 .side-card .side-img-box .side_card_img {
     padding: 10px;
+}
+
+.side-card .side-img-box .side_card_img img {
+    border-radius: 50%;
 }
 .side-card .side-img-box .side_card_content {
     color: #000;
@@ -163,7 +167,7 @@ svg#crtBgShape2 {
 }
 
 .skill-block {
-  width: 370px;
+  max-width: 370px;
   padding: 4px 0;
   font-family: sans-serif;
 }
@@ -265,4 +269,21 @@ span.exp_year:before {
     left: 0;
     top: 18px;
     /* opacity: 0.5; */
+}
+
+button.fixed {
+    position: fixed;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px !important;
+    background: transparent;
+}
+button.fixed svg {
+    color: #000;
 }
